modified:   final.html

--- a/final.html
+++ b/final.html
@@ -91,7 +91,7 @@
         <div class="modal-content">
             <span class="close-btn">&times;</span>
             <h2 id="modalTitle"></h2>
-            <img id="modalImage" src="" alt="">
+            <img id="modalImage" src="https://cdn.vectorstock.com/i/1000v/01/60/pantry-chef-garnishing-appetizer-with-oil-vector-50220160.jpg" alt="A pantry chef makes some food">
             <h3>Ingredients</h3>
             <ul id="modalIngredients"></ul>
             <h3>Instructions</h3>
