modified:   about.html 	modified:   contact.html 	modified:   final.html

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,7 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="index.html">Home</a>
-            <a href="recipes.html">Recipes</a>
-            <a href="categories.html">Categories</a>
+            <a href="final.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html" class="active">Contact</a>
         </nav>
