modified:   final/about.html 	modified:   final/attributions.html 	modified:   final/contact.html 	deleted:    final/final.js 	modified:   final/index.html 	new file:   final/scripts/global.js 	modified:   final/scripts/main.js 	modified:   final/styles/final.css

--- a/final/attributions.html
+++ b/final/attributions.html
@@ -20,8 +20,6 @@
         </div>
         <nav class="nav" id="navMenu">
             <a href="index.html">Home</a>
-            <a href="recipes.html">Recipes</a>
-            <a href="categories.html">Categories</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -82,5 +80,6 @@
             <a href="#">Video Demo</a>
         </p>
     </footer>
+    <script type="module" src="scripts/global.js"></script>
 </body>
 </html>
