--- a/final/contact.html
+++ b/final/contact.html
@@ -19,7 +19,7 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="final.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html" class="active">Contact</a>
         </nav>
@@ -57,6 +57,6 @@
             <a href="#">Video Demo</a>
         </p>
     </footer>
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/global.js"></script>
 </body>
 </html>
