--- a/final/about.html
+++ b/final/about.html
@@ -19,7 +19,7 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="final.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html" class="active">About</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -58,6 +58,6 @@
         </p>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script type="module" src="scripts/global.js"></script>
 </body>
 </html>
