--- a/final/index.html
+++ b/final/index.html
@@ -28,7 +28,7 @@
             <span>The Pantry Chef</span>
         </div>
         <nav class="nav" id="navMenu">
-            <a href="final.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -42,15 +42,14 @@
         </div>
         <section class="search-section">
             <input type="text" id="searchInput" placeholder="Search recipes by name or ingredient..." />
-            <button id="searchBtn">Search</button>
+            <button id="searchBtn" class="btn">Search</button>
         </section>
 
         <section class="hero">
-            <img src="https://wallpaperbat.com/img/8940717-food-chicken-hd-wallpaper.png" alt="Featured Recipe" loading="lazy">
             <div class="hero-text">
                 <h1>Fresh Meals from Your Pantry</h1>
                 <p>Delicious recipes made from the ingredients you already have at home.</p>
-                <a href="recipes.html" class="btn">Browse Recipes</a>
+                <a href="#" class="btn">Browse Recipes</a>
             </div>
         </section>
 
@@ -77,8 +76,8 @@
     <footer class="footer">
         <p>&copy; 2025 The Pantry Chef. All Rights Reserved.</p>
         <p>
-            <a href="#">Privacy Policy</a> | 
-            <a href="#">Terms of Service</a> | 
+            <a href="#">Privacy Policy</a> |
+            <a href="#">Terms of Service</a> |
             <a href="contact.html">Contact</a> |
             <a href="attributions.html">Attributions</a> |
             <a href="#">Video Demo</a>
@@ -97,6 +96,7 @@
         </div>
     </div>
 
+    <script type="module" src="scripts/global.js"></script>
     <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
