--- a/final/form-action.html
+++ b/final/form-action.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Submission Successful</title>
-    <meta name="description" content="Thank you for your message.">
+    <title>Form Submitted - The Pantry Chef</title>
+    <meta name="description" content="Thank you for your message. Your form has been submitted.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,6 @@
         </div>
         <nav class="nav" id="navMenu">
             <a href="index.html">Home</a>
-            <a href="recipes.html">Recipes</a>
-            <a href="categories.html">Categories</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -30,10 +28,9 @@
 
     <main class="form-action-main">
         <h1>Thank You!</h1>
-        <p>Your message has been successfully submitted. We will get back to you as soon as possible.</p>
+        <p>Your message has been successfully submitted. Here is the information we received:</p>
         <div class="submitted-data" id="submittedData">
             </div>
-        <a href="index.html" class="btn">Return to Home</a>
     </main>
 
     <footer class="footer">
@@ -47,16 +44,23 @@
         </p>
     </footer>
 
-    <script>
-        // Simple script to display form data
-        const params = new URLSearchParams(window.location.search);
-        const dataContainer = document.getElementById('submittedData');
-        if (params.toString()) {
-            dataContainer.innerHTML = '<h3>Submitted Information:</h3>';
-            for (const [key, value] of params.entries()) {
-                dataContainer.innerHTML += `<p><strong>${key}:</strong> ${value}</p>`;
+    <script type="module" src="scripts/global.js"></script>
+    <script type="module">
+        document.addEventListener('DOMContentLoaded', () => {
+            const params = new URLSearchParams(window.location.search);
+            const container = document.getElementById('submittedData');
+            
+            if (params.get('name')) {
+                container.innerHTML = `
+                    <p><strong>Name:</strong> ${params.get('name')}</p>
+                    <p><strong>Email:</strong> ${params.get('email')}</p>
+                    <p><strong>Subject:</strong> ${params.get('subject')}</p>
+                    <p><strong>Message:</strong> ${params.get('message')}</p>
+                `;
+            } else {
+                container.innerHTML = '<p>No form data was submitted.</p>';
             }
-        }
+        });
     </script>
 </body>
 </html>
