--- a/final/attributions.html
+++ b/final/attributions.html
@@ -77,7 +77,7 @@
             <a href="#">Terms of Service</a> | 
             <a href="contact.html">Contact</a> |
             <a href="attributions.html">Attributions</a> |
-            <a href="#">Video Demo</a>
+            <a href="video/finalprojvid.mp4">Video Demo</a>
         </p>
     </footer>
     <script type="module" src="scripts/global.js"></script>
