modified:   final/index.html

--- a/final/index.html
+++ b/final/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Pantry Chef - Simple Recipes from Everyday Ingredients</title>
+    <title>The Pantry Chef</title>
     <meta name="description" content="Discover simple, delicious recipes you can make from ingredients already in your kitchen. The Pantry Chef helps home cooks create amazing meals without extra shopping.">
     <meta name="author" content="Nirintsoa Liva Jhonson Rabariharinjaka">
 
