modified:   final/index.html

--- a/final/index.html
+++ b/final/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="The Pantry Chef - Simple Recipes from Everyday Ingredients">
+    <meta property="og:title" content="The Pantry Chef">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://livajhonson.github.io/wdd231/final.webp">
     <meta property="og:url" content="https://livajhonson.github.io/wdd231/final.html">
