modified:   final/about.html 	modified:   final/attributions.html 	modified:   final/contact.html 	modified:   final/form-action.html 	modified:   final/index.html 	renamed:    final/Video/finalprojvid.mp4 -> final/videos/finalprojvid.mp4

--- a/final/form-action.html
+++ b/final/form-action.html
@@ -40,7 +40,7 @@
             <a href="#">Terms of Service</a> | 
             <a href="contact.html">Contact</a> |
             <a href="attributions.html">Attributions</a> |
-            <a href="video/finalprojvid.mp4">Video Demo</a>
+            <a href="videos/finalprojvid.mp4">Video Demo</a>
         </p>
     </footer>
 
